Convert to typescript

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all"] }
+tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all", "api-all", "mobile"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
