--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
+    "@types/node": "^22.15.27",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.8.3",
     "vite": "^4.4.5",
     "vite-plugin-solid": "^2.7.0"
   }
