--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.3",
     "@tauri-apps/api": "^1.4.0",
     "solid-js": "^1.7.8"
   },
