--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "wedding-planner-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:android": "tauri android dev",
+    "tauri:ios": "tauri ios dev",
+    "tauri:android:build": "tauri android build",
+    "tauri:ios:build": "tauri ios build"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.3",
-    "@tauri-apps/api": "^1.4.0",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0",
+    "@tauri-apps/plugin-fs": "^2.0.0",
+    "@tauri-apps/plugin-http": "^2.0.0",
+    "@tauri-apps/plugin-shell": "^2.0.0",
+    "@tauri-apps/plugin-store": "^2.0.0",
     "solid-js": "^1.7.8"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.4.0",
+    "@tauri-apps/cli": "^2.0.0",
     "@types/node": "^22.15.27",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
